Bug: Fixing alignment 2

--- a/style3.css
+++ b/style3.css
@@ -60,7 +60,7 @@
 
 .content {
     alignment:center;
-    width:fit-content;
+    width:1300px;
     font: 20px "Arial", sans-serif;
     line-height: normal;
     white-space: normal;
